// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WatchCases basic-type-error 1`] = `
Object {
  "errors": Array [
    "xfile
(1,7): error TS2322",
  ],
  "warnings": Array [],
}
`;

exports[`WatchCases basic-type-error 2`] = `
Object {
  "errors": Array [],
  "warnings": Array [],
}
`;

exports[`WatchCases basic-type-no-error 1`] = `
Object {
  "errors": Array [],
  "warnings": Array [],
}
`;

exports[`WatchCases basic-type-no-error 2`] = `
Object {
  "errors": Array [],
  "warnings": Array [],
}
`;

exports[`WatchCases check-file-until-error-fixed 1`] = `
Object {
  "errors": Array [
    "xfile
(1,7): error TS2322",
    "xfile
(1,7): error TS2322",
  ],
  "warnings": Array [],
}
`;

exports[`WatchCases check-file-until-error-fixed 2`] = `
Object {
  "errors": Array [
    "xfile
(1,7): error TS2322",
  ],
  "warnings": Array [],
}
`;

exports[`WatchCases check-file-until-error-fixed 3`] = `
Object {
  "errors": Array [],
  "warnings": Array [],
}
`;

exports[`WatchCases check-interfaces-until-fixed 1`] = `
Object {
  "errors": Array [
    "xfile
(4,14): error TS2420",
  ],
  "warnings": Array [],
}
`;

exports[`WatchCases check-interfaces-until-fixed 2`] = `
Object {
  "errors": Array [
    "xfile
(3,14): error TS2420",
    "xfile
(4,14): error TS2420",
  ],
  "warnings": Array [],
}
`;

exports[`WatchCases check-interfaces-until-fixed 3`] = `
Object {
  "errors": Array [
    "xfile
(3,14): error TS2420",
  ],
  "warnings": Array [],
}
`;

exports[`WatchCases check-interfaces-until-fixed 4`] = `
Object {
  "errors": Array [],
  "warnings": Array [],
}
`;

exports[`WatchCases check-interfaces-until-fixed 5`] = `
Object {
  "errors": Array [
    "xfile
(3,14): error TS2420",
    "xfile
(4,14): error TS2420",
  ],
  "warnings": Array [],
}
`;

exports[`WatchCases class-hierarchy-types 1`] = `
Object {
  "errors": Array [
    "xfile
(3,14): error TS2420",
    "xfile
(7,18): error TS2345",
    "xfile
(4,11): error TS2345",
  ],
  "warnings": Array [],
}
`;

exports[`WatchCases class-hierarchy-types 2`] = `
Object {
  "errors": Array [
    "xfile
(7,18): error TS2345",
    "xfile
(4,11): error TS2345",
  ],
  "warnings": Array [],
}
`;

exports[`WatchCases class-hierarchy-types 3`] = `
Object {
  "errors": Array [
    "xfile
(7,18): error TS2345",
  ],
  "warnings": Array [],
}
`;

exports[`WatchCases class-hierarchy-types 4`] = `
Object {
  "errors": Array [],
  "warnings": Array [],
}
`;

exports[`WatchCases css-modules-error 1`] = `
Object {
  "errors": Array [
    "xfile
(3,20): error TS2339",
  ],
  "warnings": Array [],
}
`;

exports[`WatchCases css-modules-error 2`] = `
Object {
  "errors": Array [],
  "warnings": Array [],
}
`;

exports[`WatchCases css-modules-no-error 1`] = `
Object {
  "errors": Array [],
  "warnings": Array [],
}
`;

exports[`WatchCases css-modules-no-error 2`] = `
Object {
  "errors": Array [],
  "warnings": Array [],
}
`;

exports[`WatchCases css-modules-removal-no-error 1`] = `
Object {
  "errors": Array [],
  "warnings": Array [],
}
`;

exports[`WatchCases css-modules-removal-no-error 2`] = `
Object {
  "errors": Array [],
  "warnings": Array [],
}
`;

exports[`WatchCases file-removal-no-error 1`] = `
Object {
  "errors": Array [],
  "warnings": Array [],
}
`;

exports[`WatchCases file-removal-no-error 2`] = `
Object {
  "errors": Array [],
  "warnings": Array [],
}
`;

exports[`WatchCases ignore-child-compiler-no-error 1`] = `
Object {
  "errors": Array [],
  "warnings": Array [],
}
`;

exports[`WatchCases ignore-child-compiler-no-error 2`] = `
Object {
  "errors": Array [],
  "warnings": Array [],
}
`;

exports[`WatchCases module-extension-type-definition 1`] = `
Object {
  "errors": Array [
    "xfile
(4,20): error TS2307",
    "xfile
(1,20): error TS2307",
    "xfile
(1,20): error TS2307",
  ],
  "warnings": Array [],
}
`;

exports[`WatchCases module-extension-type-definition 2`] = `
Object {
  "errors": Array [
    "xfile
(4,20): error TS2307",
    "xfile
(1,20): error TS2307",
    "xfile
(1,20): error TS2307",
  ],
  "warnings": Array [],
}
`;

exports[`WatchCases module-extension-type-definition 3`] = `
Object {
  "errors": Array [
    "xfile
(4,20): error TS2307",
    "xfile
(1,20): error TS2307",
    "xfile
(1,20): error TS2307",
  ],
  "warnings": Array [],
}
`;

exports[`WatchCases module-extension-type-definition 4`] = `
Object {
  "errors": Array [],
  "warnings": Array [],
}
`;

exports[`WatchCases module-extension-type-definition 5`] = `
Object {
  "errors": Array [
    "xfile
(2,20): error TS2307",
  ],
  "warnings": Array [],
}
`;

exports[`WatchCases module-extension-type-definition 6`] = `
Object {
  "errors": Array [
    "xfile
(4,20): error TS2307",
    "xfile
(1,20): error TS2307",
    "xfile
(1,20): error TS2307",
  ],
  "warnings": Array [],
}
`;

exports[`WatchCases module-extension-type-definition 7`] = `
Object {
  "errors": Array [],
  "warnings": Array [],
}
`;

exports[`WatchCases node-module-with-type-definition 1`] = `
Object {
  "errors": Array [
    "xfile
(2,17): error TS2345",
  ],
  "warnings": Array [],
}
`;

exports[`WatchCases node-module-with-type-definition 2`] = `
Object {
  "errors": Array [],
  "warnings": Array [],
}
`;

exports[`WatchCases react-components 1`] = `
Object {
  "errors": Array [
    "xfile
(11,17): error TS2339",
  ],
  "warnings": Array [],
}
`;

exports[`WatchCases react-components 2`] = `
Object {
  "errors": Array [
    "xfile
(11,17): error TS2339",
    "xfile
(9,9): error TS2322",
    "xfile
(9,9): error TS2322",
    "xfile
(9,9): error TS2322",
  ],
  "warnings": Array [],
}
`;

exports[`WatchCases react-components 3`] = `
Object {
  "errors": Array [
    "xfile
(11,17): error TS2339",
  ],
  "warnings": Array [],
}
`;

exports[`WatchCases skipLibCheck-false 1`] = `
Object {
  "errors": Array [
    "xfile
(1,1): error TS1046",
  ],
  "warnings": Array [],
}
`;

exports[`WatchCases skipLibCheck-false 2`] = `
Object {
  "errors": Array [],
  "warnings": Array [],
}
`;

exports[`WatchCases skipLibCheck-false 3`] = `
Object {
  "errors": Array [
    "xfile
(1,17): error TS2345",
  ],
  "warnings": Array [],
}
`;

exports[`WatchCases skipLibCheck-false 4`] = `
Object {
  "errors": Array [
    "xfile
(1,17): error TS2345",
    "xfile
(1,1): error TS1046",
  ],
  "warnings": Array [],
}
`;

exports[`WatchCases ts-dependency-only-error 1`] = `
Object {
  "errors": Array [],
  "warnings": Array [],
}
`;

exports[`WatchCases ts-dependency-only-error 2`] = `
Object {
  "errors": Array [
    "xfile
(1,22): error TS2306",
  ],
  "warnings": Array [],
}
`;

exports[`WatchCases ts-dependency-only-error 3`] = `
Object {
  "errors": Array [],
  "warnings": Array [],
}
`;

exports[`WatchCases ts-dependency-only-error 4`] = `
Object {
  "errors": Array [
    "xfile
(3,22): error TS2420",
  ],
  "warnings": Array [],
}
`;

exports[`WatchCases ts-dependency-only-removal-2-error 1`] = `
Object {
  "errors": Array [],
  "warnings": Array [],
}
`;

exports[`WatchCases ts-dependency-only-removal-2-error 2`] = `
Object {
  "errors": Array [
    "xfile
(1,22): error TS2307",
  ],
  "warnings": Array [],
}
`;

exports[`WatchCases ts-dependency-only-removal-2-error 3`] = `
Object {
  "errors": Array [
    "xfile
(3,22): error TS2420",
  ],
  "warnings": Array [],
}
`;

exports[`WatchCases ts-dependency-only-removal-error 1`] = `
Object {
  "errors": Array [],
  "warnings": Array [],
}
`;

exports[`WatchCases ts-dependency-only-removal-error 2`] = `
Object {
  "errors": Array [],
  "warnings": Array [],
}
`;

exports[`WatchCases ts-dependency-only-removal-error 3`] = `
Object {
  "errors": Array [
    "xfile
(1,22): error TS2307",
  ],
  "warnings": Array [],
}
`;

exports[`WatchCases tslint-error 1`] = `
Object {
  "errors": Array [
    "xfile
  2:11  error  ' should be \\"  quotemark
",
    "xfile
  4:11  error  ' should be \\"  quotemark
",
  ],
  "warnings": Array [],
}
`;

exports[`WatchCases tslint-error 2`] = `
Object {
  "errors": Array [
    "xfile
  4:11  error  ' should be \\"  quotemark
",
  ],
  "warnings": Array [],
}
`;

exports[`WatchCases tslint-error 3`] = `
Object {
  "errors": Array [],
  "warnings": Array [],
}
`;

exports[`WatchCases tslint-warning 1`] = `
Object {
  "errors": Array [],
  "warnings": Array [
    "xfile
  2:11  warning  ' should be \\"  quotemark
",
    "xfile
  4:11  warning  ' should be \\"  quotemark
",
  ],
}
`;

exports[`WatchCases tslint-warning 2`] = `
Object {
  "errors": Array [],
  "warnings": Array [
    "xfile
  4:11  warning  ' should be \\"  quotemark
",
  ],
}
`;

exports[`WatchCases tslint-warning 3`] = `
Object {
  "errors": Array [],
  "warnings": Array [],
}
`;

exports[`WatchCases type-patches-error 1`] = `
Object {
  "errors": Array [],
  "warnings": Array [],
}
`;

exports[`WatchCases type-patches-error 2`] = `
Object {
  "errors": Array [
    "xfile
(1,22): error TS2307",
  ],
  "warnings": Array [],
}
`;

exports[`WatchCases type-patches-error 3`] = `
Object {
  "errors": Array [],
  "warnings": Array [],
}
`;
